# SentriX

./: .gitignore  CODEBASE_OVERVIEW.md  DEMO_CHEATSHEET_5MIN.md  EdgeNativeIoTmqtt_research_plan.md  PROFESSOR_DEMO_GUIDE.md  README.md  REPRODUCIBILITY.md  Related_Work_Shortlist_Draft.md  Research_plan.md  SETUP_CODING.md
Research_Paper/: conference_101719.tex
artifacts/week3_week5_package_20260310/data/: week3_runs_labeled.csv
artifacts/week3_week5_package_20260310/docs/: COMMANDS.md  MANIFEST.sha256  README.md
artifacts/week3_week5_package_20260310/reports/: feature_summary_by_protocol.csv  feature_summary_overall.csv  kl_alignment_by_class.csv  week3_feature_quality.md  week5_baseline_metrics.csv  week5_baseline_results.md  week5_baseline_summary.json
artifacts/week3_week5_package_20260310/scripts/: validate_feature_quality.py
config/: feature_schema.md
dashboard/: .env.example  README.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
deploy/: docker-compose.yml
deploy/californium/: Dockerfile  README.md  pom.xml
deploy/californium/src/main/java/io/sentrix/coap/: CoapBackendServer.java
deploy/scripts/: coap_backend_stub.py  metrics_api_stub.py  metrics_server.js
ml-pipeline/: README.md
ml-pipeline/src/: export_events_to_dataset.py  select_and_compress_model.py  train_baselines.py  validate_feature_quality.py  week11_generate_figures.py  week11_statistical_analysis.py  week6_export_onnx.py  week6_export_simple.py  week6_train_champion.py
proxy-core/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
proxy-core/build-onnx/: CMakeCache.txt  Makefile  cmake_install.cmake  sentrix_proxy
proxy-core/include/sentrix/: coap_module.hpp  detection_pipeline.hpp  event_log.hpp  feature_debug.hpp  feature_mapping.hpp  feature_vector.hpp  metrics_store.hpp  mqtt_module.hpp  protocol_module.hpp  proxy_core.hpp
proxy-core/scripts/: week10_analyze_features.py  week10_coap_stress.py  week10_mqtt_stress.py  week10_mqtt_stress_direct.py  week10_mqtt_stress_simple.py  week7_smoke_validation.py  week8_attack_scenario.py  week8_benign_scenario.py  week8_feature_drift_analysis.py  week8_latency_analysis.py  week9_coap_integration.py  week9_combined_protocol.py
proxy-core/src/coap/: coap_module.cpp
proxy-core/src/common/: detection_pipeline.cpp  event_log.cpp  feature_debug.cpp  feature_mapping.cpp  main.cpp  metrics_store.cpp  proxy_core.cpp
proxy-core/src/mqtt/: mqtt_module.cpp
simulators/: requirements.txt
simulators/coap/: README.md  coap_attacks.py  coap_benign.py  coap_live_attacks.py  coap_live_benign.py
simulators/common/: feature_schema.py
simulators/mqtt/: mqtt_attacks.py  mqtt_benign.py
